<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center">

    <TextView
        android:id="@+id/OtpForUser_MobileNo"
        android:text="@string/mobile_number"
        style="@style/edittext.login_edittext"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/OtpForUser_OTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/OtpForUser_MobileNo"
        android:hint="@string/otp"
        android:visibility="gone" />

    <Button
        android:id="@+id/OtpForUser_OTPBtn"
        style="@style/button"
        android:background="@drawable/buttonstyle1"
        android:text="@string/send_otp"
        android:layout_below="@id/OtpForUser_OTP"/>
</RelativeLayout>
