<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"

    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


    <TextView
        android:id="@+id/UniqueID_TextView"
        style="@style/edittext"
        android:text="@string/enter_your_aadhar_number"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/UniqueID_EditText"
     style="@style/edittext"
        android:drawablePadding="12dp"
        android:hint="@string/aadhar_number"


      />


        <TextView
            android:id="@+id/UniqueID_MobileNO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <Button
            android:id="@+id/UniqueID_BUTTON"
           style="@style/button"
            android:text="@string/okay"
            android:background="@drawable/buttonstyle1"
            android:layout_marginTop="30dp"
            />

        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>

</ScrollView>