<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/elogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/elogo"
           />
        <EditText
            android:id="@+id/Login_UserName"
            android:layout_width="match_parent"
            android:layout_below="@id/elogo"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColorHint="#ffffff" />

        <EditText
            android:id="@+id/Login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login_UserName"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColorHint="#ffffff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/Login_UserName"
            android:layout_marginLeft="10dp"
            android:background="#f9d7db" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/Login_password"
            android:layout_marginLeft="10dp"
            android:background="#f9d7db" />


        <Button
            android:id="@+id/LoginButton"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login_password"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonstyle1"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="#f16f7d" />

        <Button
            android:id="@+id/SignInButton"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LoginButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonstyle1"
            android:clickable="true"
            android:text="sign IN"
            android:textColor="#f16f7d" />


        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>
